# range-typed-integers

./: LICENSE  README.rst  pyproject.toml  setup.cfg
.github/workflows/: build-test-publish.yml
range_typed_integers/: __init__.py  check.py  types.py
tests/: runtime_test.py
